Crash when undoing reincarnation of a shape selection too quickly

It may happen that the update jobs are still accessing the shape
selection pointer via KisSelection::updateProjection(), while
undo command is busy reincarnating the shape selection into a
raster one.

We should guard the shape selection pointer from such concurrent
access.

BUG:432329